--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -54,8 +54,8 @@
     --bs-black-rgb: 0, 0, 0;
     --bs-body-color-rgb: 33, 37, 41;
     --bs-body-bg-rgb: 255, 255, 255;
-    --bs-font-sans-serif: 'Satoshi', sans-serif;
-    --bs-font-monospace: 'Satoshi', sans-serif;
+    --bs-font-sans-serif: 'Work Sans', sans-serif;
+    --bs-font-monospace: 'Work Sans', sans-serif;
     --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
     --bs-body-font-family: var(--bs-font-sans-serif);
     --bs-body-font-size: 1rem;
